--- a/CSS/footer.css
+++ b/CSS/footer.css
@@ -47,7 +47,7 @@
 /* Mobile */
 @media (max-width: 576px) {
     #footer {
-        height: 70vh;
+        height: 100%;
         padding: 2rem;
     }
 
