--- a/CSS/skills.css
+++ b/CSS/skills.css
@@ -122,6 +122,7 @@
     .skill-tile {
         grid-template-columns: 1fr;
         grid-template-rows: 1fr 1fr;
+        height: 100%;
     }
     
     .img-container{
@@ -145,7 +146,7 @@
     }
     
     .desc-container h2{
-        font-size: 2.3rem;
+        font-size: 2rem;
     }
     
     .desc-container p{
