--- a/CSS/who_am_i.css
+++ b/CSS/who_am_i.css
@@ -79,11 +79,13 @@
 
 /*** Mobile ***/
 @media (max-width: 576px) {
+    #who-am-i {
+        height: 100%;
+    }
+
     #who-am-i > div{
-        height: 80%;
-        width: 80%;
-        margin: 3rem auto 0 auto;
         display: grid;
+        height: 100%;
         grid-template-columns: repeat(5, 1fr);
         grid-template-rows: repeat(4, 1fr);
     }
@@ -95,10 +97,11 @@
     #who-am-i > div > h3 {
         grid-column: 2/3;
         grid-row: 1/2;
-        display: flex;
         font-size: 2.4rem;
+        display: flex;
         flex-direction: row;
-        margin-block: auto;
+        align-items: center;
+        justify-content: center;
     }
 
     #who-am-i > div > h3 > span{
@@ -108,6 +111,8 @@
     #who-am-i > div > div {
         grid-column: 1/6;
         grid-row: 2/5;
+        padding: 0 0.5rem;
+
     }
 
     #who-am-i > div > div > p:nth-child(1){
