--- a/CSS/skills.css
+++ b/CSS/skills.css
@@ -147,6 +147,7 @@
     
     .desc-container h2{
         font-size: 2rem;
+        margin: 1rem;
     }
     
     .desc-container p{
@@ -199,7 +200,7 @@
     }
     
     .desc-container h2{
-        font-size: 3.5rem;
+        font-size: 3rem;
     }
     
     .desc-container p{
