--- a/CSS/projects.css
+++ b/CSS/projects.css
@@ -99,7 +99,8 @@
     }
     
     .project-desc{
-        height: 100%;
+        min-height: 100%;
+        height: auto;
         width: 100%;
         padding: 2rem;
     }
