--- a/CSS/projects.css
+++ b/CSS/projects.css
@@ -94,7 +94,9 @@
         display: flex;
         flex-direction: column;
         width: 90%;
-        max-height: 80%;
+        /* max-height: 80%; */
+        /* max-height: 100%; */
+        height: fit-content;
         margin: 0.7rem 0;
     }
     
