--- a/CSS/projects.css
+++ b/CSS/projects.css
@@ -95,8 +95,8 @@
         flex-direction: column;
         width: 90%;
         /* max-height: 80%; */
-        /* max-height: 100%; */
-        height: fit-content;
+        min-height: 100%;
+        height: auto;
         margin: 0.7rem 0;
     }
     
