--- a/CSS/projects.css
+++ b/CSS/projects.css
@@ -101,10 +101,14 @@
     }
     
     .project-desc{
-        min-height: 100%;
-        height: auto;
+        /* min-height: 100%;
+        height: auto; */
         width: 100%;
         padding: 2rem;
+    }
+
+    .project-desc h2{
+        margin-block: 1rem;
     }
     
     .project-desc p {
