--- a/CSS/header.css
+++ b/CSS/header.css
@@ -116,6 +116,7 @@ header>img:nth-child(1) {
         height: 2.2rem;
         width: 2.2rem;
         margin-bottom: 0.8rem;
+        top: 30%;
     }
 }
 
